--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,10 +23,10 @@ body{
  font-size:10px;
 }
 .menu-container{
-  @include outer-container($max-width);
+  @include outer-container;
 }
 .container{
-  @include outer-container($max-width);
+  @include outer-container;
   border: 1px solid #f5f5f5;
   background-color: white;
 }
@@ -45,6 +45,7 @@ body{
   min-height: 550px;
   background-color: white;
 }
+
 ul{
   @include no-space;
 }
@@ -154,14 +155,14 @@ nav ul li a:hover{
     padding-top: 50px;
 }
 .serveis-clients{
-  @include outer-container($max-width);
+  @include outer-container;
   padding: 0 40px;
 }
 /* ==========================================================================
    Particulars
    ========================================================================== */
 #particulars{
-  @include outer-container($max-width);
+  @include outer-container;
 	margin: -50px auto auto auto;
   background-color: white;
   border: 1px solid #f2f2f2;
@@ -705,7 +706,6 @@ Entitats Socials
 ========================================================================== */
 #entitats-socials{
   @include outer-container;
-  @include clearfix;
   margin: -1px auto auto auto;
   background-color: white;
   border: 1px solid #f2f2f2;
@@ -729,27 +729,17 @@ Entitats Socials
   @include span-columns(5 of 6);
   @include shift(1);
 }
-.marc-foto-6{ 
-  position: absolute;
-  background-color: #2951a7;
-  // Media Queries
-      @include media($m) {
-                }
-    // 
-    @include media($l) {
-          @include span-columns(4 of 6);
-          @include shift(1);
-          height: 270px;
-                }
-    // 
+#entitats-socials .marc-foto-2{
+  z-index: 99;
+  position: relative;
 }
 .rectangle-gris-vertical{
-  position: absolute;
   @include span-columns(1.5 of 6);
   @include shift(2.25);
   height: 630px;
   background-color:#f7f7f7;
   z-index: 1;
+  position: relative;
 }
 
 /* ==========================================================================
@@ -762,7 +752,7 @@ Contacte
     border: 1px solid #f2f2f2;
     box-sizing: border-box;
     z-index: 9;
-    // height: 800px;
+    display:inline-block;
    // Media Queries
         @include media($m) {
                   }
@@ -798,11 +788,13 @@ h6{
 .camps-formulari{
   @include span-columns(6 of 10);
   height:auto;
-
 }
 .localitzacio{
   @include span-columns(4 of 10);
   height:auto;
+}
+.transports{
+  @include no-space;
 }
 fieldset{
   @include span-columns(4.5 of 6);
@@ -814,11 +806,15 @@ label{
    @include opensans(600, 1.6em, #333333);
    @include clearfix;
 }
+.label2{
+   @include opensans(400, 1.4em, #333333);
+   @include clearfix;
+}
 .cell{
   @include span-columns(4.5 of 4.5);
   @include clearfix;
 }
-input{
+.input-style{
   @include span-columns(2.5 of 4.5);
   height: 58px;
   border: 1px solid #f2f2f2;
@@ -828,6 +824,18 @@ input{
   box-shadow:inset 1px 12px 8px -7px #f5f5f5;
   @include opensans(400, 1.6em, #333333);
 }
+.input-style-2{
+  border: 1px solid #f2f2f2;
+  margin: 15px 10px 30px auto;
+  padding: 10px;
+  border-radius: 2px;
+  @include opensans(400, 1.6em, #333333);
+}
+
+.cell a{
+  @include opensans(600, 1em, #345db7);
+  text-decoration: none;
+} 
 #comments{
   width: 100%;
   height: 150px;
@@ -839,14 +847,77 @@ input{
   box-shadow:inset 1px 12px 8px -7px #f5f5f5;
   @include opensans(400, 1.6em, #333333);  
 }
+#contacte ul{
+   list-style-type: none;
+}
+#contacte li{
+  margin-top: -1px;
+  width: 100%;
+  height: 90px;
+  border: 1px solid #f2f2f2;
+  border-right: none;
+  @include opensans(400, 1.6em, #333333);
+}
+#contacte li:last-child{
+  border-bottom: none;
+}
+.llista_icon{
+  @include span-columns(1 of 4);
+}
+.llista_icon img{
+  display: block;
+  margin: 0 auto;
+  max-height: 36px;
+  margin-top: 27px;
+}
+.llista_text_1 {
+  margin-top: 22px;
+}
+.llista_text p{
+  margin-top: 34px;
+}
 /* ==========================================================================
  Footer
 ========================================================================== */
 footer {
-  background-color: #2f3542;
-  margin-top:-20px;
-  z-index: 1;
   width:100%;
+  height: auto;
+  background-color: #2f3542;
+  margin-top:-50px;
+  z-index: 1;
+}
+
+.socialmedia{
+  @include span-columns(2 of 10);
+  margin-top: 100px;
+  display:inline-block;
+}
+.socialmedia a{
+  display:inline-block;
+  padding-right: 20px;
+}
+// .socialmedia a:first-child{
+//   padding-right: 20px;
+// }
+.logo-footer{
+  @include span-columns(6 of 10);
+  margin-top: 85px;
+  @include clearfix;
+}
+footer img{
+  margin: 0 auto;
+  display: block;
+}
+.idioma{
+  @include span-columns(2 of 10);
+  margin-top: 100px;
+}
+
+.idioma a{
+ @include opensans(600, 1.6em,#4b515d);
+ text-decoration: none;
+ padding-left: 60px;
+
 }
 .stroke-blau{
   color: #5474b9;
@@ -855,14 +926,14 @@ footer {
   margin: 15px auto 0 auto;
   position: relative;
 }
-copyright{
+.copyright{
   @include opensans(400, 1.4em,#4b515d);
   text-align: center;
   display: block;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
-.socialmedia{
 
-}
 
 /* ==========================================================================
  Clearfix
