--- a/css/main.css
+++ b/css/main.css
@@ -470,6 +470,20 @@ h5 {
   .serveis:last-child {
     margin-right: 0; }
 
+.serveis1 {
+  margin-top: 40px;
+  padding: 0;
+  list-style-type: none;
+  border: 1px solid #f5f5f5;
+  border-right: none;
+  float: left;
+  display: block;
+  margin-right: 0.3858797911%;
+  width: 83.2690200348%;
+  margin-left: 16.7309799652%; }
+  .serveis1:last-child {
+    margin-right: 0; }
+
 .llista {
   font-family: 'Open Sans', Helvetica, sans-serif;
   font-weight: 400;
@@ -488,39 +502,7 @@ h5 {
 li:last-child {
   border-bottom: none; }
 
-.marc-forma-1 {
-  width: 190px;
-  height: 100%;
-  margin: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
-  @media screen and (min-width: 48em) {
-    .marc-forma-1 {
-      max-height: 420px;
-      float: left;
-      display: block;
-      margin-right: 0.3858797911%;
-      width: 83.2690200348%; }
-      .marc-forma-1:last-child {
-        margin-right: 0; } }
-  @media screen and (min-width: 64em) {
-    .marc-forma-1 {
-      max-height: 530px;
-      float: left;
-      display: block;
-      margin-right: 0.3858797911%;
-      width: 83.2690200348%; }
-      .marc-forma-1:last-child {
-        margin-right: 0; } }
-
-.forma1 {
-  border-radius: 50%;
-  background: #fafafa; }
-
 .marc-foto-1 {
-  margin-top: 25px;
   width: 190px;
   height: 365px;
   position: absolute; }
@@ -534,7 +516,8 @@ li:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 64em) {
     .marc-foto-1 {
-      height: 570px;
+      margin-top: 35px;
+      height: 550px;
       float: left;
       display: block;
       margin-right: 0.3858797911%;
@@ -552,6 +535,25 @@ li:last-child {
     .image1 {
       background-image: url(../img/particulars1_L_@2x.jpg);
       background-size: 100%; } }
+
+.marc-forma-1 {
+  width: 485px;
+  height: 485px;
+  position: absolute; }
+  @media screen and (min-width: 64em) {
+    .marc-forma-1 {
+      margin-top: 68px;
+      float: left;
+      display: block;
+      margin-right: 0.3858797911%;
+      width: 83.2690200348%;
+      margin-left: 8.3654899826%; }
+      .marc-forma-1:last-child {
+        margin-right: 0; } }
+
+.cercle {
+  max-width: 485px;
+  margin-left: 1%; }
 
 /* ==========================================================================
    Autonoms i Freelance
@@ -597,7 +599,9 @@ li:last-child {
     margin-right: 0; }
 
 .marc-foto-2 {
-  background-color: #2951a7; }
+  background-color: #2951a7;
+  z-index: 999;
+  position: relative; }
   @media screen and (min-width: 64em) {
     .marc-foto-2 {
       float: left;
@@ -611,7 +615,9 @@ li:last-child {
 
 .marc-foto-3 {
   height: 270px;
-  background-color: #2951a7; }
+  background-color: #2951a7;
+  z-index: 999;
+  position: relative; }
   @media screen and (min-width: 64em) {
     .marc-foto-3 {
       float: left;
@@ -623,12 +629,6 @@ li:last-child {
       margin-top: 70px; }
       .marc-foto-3:last-child {
         margin-right: 0; } }
-
-.forma2 {
-  width: 520px;
-  height: 520px;
-  border-radius: 50%;
-  background: #fafafa; }
 
 .image2 {
   z-index: 99; }
@@ -649,6 +649,14 @@ li:last-child {
     .image3 {
       background-image: url(../img/autonoms2_L_@2x.jpg);
       background-size: cover; } }
+
+.rombo {
+  width: 480px;
+  height: 480px;
+  margin-left: 9.5%;
+  z-index: 1;
+  margin-top: -625px;
+  position: relative; }
 
 /* ==========================================================================
 PIMES i Startups
@@ -803,6 +811,8 @@ Gran Empresa
       padding-bottom: 100px; } }
 
 .marc-foto-4 {
+  z-index: 999;
+  position: relative;
   background-color: #2951a7; }
   @media screen and (min-width: 64em) {
     .marc-foto-4 {
@@ -816,7 +826,9 @@ Gran Empresa
         margin-right: 0; } }
 
 .marc-foto-5 {
-  background-color: #2951a7; }
+  background-color: #2951a7;
+  z-index: 999;
+  position: relative; }
   @media screen and (min-width: 64em) {
     .marc-foto-5 {
       float: left;
@@ -825,7 +837,7 @@ Gran Empresa
       width: 66.5380400696%;
       margin-left: 16.7309799652%;
       height: 260px;
-      margin-top: 35px; }
+      margin-top: 20px; }
       .marc-foto-5:last-child {
         margin-right: 0; } }
 
@@ -849,6 +861,12 @@ Gran Empresa
   width: 410px;
   margin-top: 4px;
   border-bottom: 2px solid #f5f5f5; }
+
+.rectangle-distorsionat {
+  margin-top: -270px;
+  left: 9.5%;
+  position: relative;
+  z-index: 1; }
 
 /* ==========================================================================
 Entitats Socials
@@ -884,7 +902,7 @@ Entitats Socials
   #entitats-socials .serveis:last-child {
     margin-right: 0; }
 
-#entitats-socials .marc-foto-2 {
+#entitats-socials .marc-foto-5 {
   z-index: 99;
   position: relative; }
 
@@ -1154,7 +1172,7 @@ footer {
   display: block;
   margin-right: 0.2311710577%;
   width: 59.9075315769%;
-  margin-top: 85px; }
+  margin-top: 95px; }
   .logo-footer:last-child {
     margin-right: 0; }
   .logo-footer::after {
@@ -1162,7 +1180,8 @@ footer {
     content: "";
     display: table; }
 
-footer img {
+.logo-footer img {
+  width: 35%;
   margin: 0 auto;
   display: block; }
 
@@ -1179,7 +1198,7 @@ footer img {
   font-family: 'Open Sans', Helvetica, sans-serif;
   font-weight: 600;
   font-size: 1.6em;
-  color: #4b515d;
+  color: #64666c;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-decoration: none;
@@ -1196,7 +1215,7 @@ footer img {
   font-family: 'Open Sans', Helvetica, sans-serif;
   font-weight: 400;
   font-size: 1.4em;
-  color: #4b515d;
+  color: #64666c;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
