--- a/css/main.css
+++ b/css/main.css
@@ -300,19 +300,17 @@ nav ul li a {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-decoration: none;
-  line-height: 50px; }
-
-nav ul li a:hover {
-  font-family: 'Source Serif Pro', serif;
-  font-weight: 700;
-  font-size: 1.5em;
-  color: #2951a7;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-decoration: none; }
+  line-height: 50px;
+  transition: 0.3s; }
+  nav ul li a:hover {
+    color: #2951a7;
+    text-decoration: none; }
 
 #entitats_socials_link {
   margin-right: 20px; }
+
+nav ul li:last-child {
+  margin: 0; }
 
 .top-bar {
   margin: 0;
@@ -324,6 +322,27 @@ nav ul li a:hover {
   opacity: 0.98;
   position: fixed;
   z-index: 99999; }
+
+.cta-menu {
+  height: 35px;
+  background-color: #2951a7;
+  border-radius: 2px;
+  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: 1.5em;
+  color: #ffffff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  line-height: 35px;
+  margin: 0 auto;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  padding: 0 10px 0 10px;
+  transition: 0.3s; }
+  .cta-menu:hover {
+    color: #7f8db4;
+    background-color: #23448d; }
 
 /* ==========================================================================
    Hero
@@ -358,9 +377,8 @@ nav ul li a:hover {
 .cta {
   height: 50px;
   background-color: #2951a7;
-  max-width: 200px; }
-
-.hero a {
+  max-width: 200px;
+  border-radius: 2px;
   font-family: 'Open Sans', Helvetica, sans-serif;
   font-weight: 600;
   font-size: 2em;
@@ -368,12 +386,15 @@ nav ul li a:hover {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 50px;
+  margin: 40px auto 0 auto;
   text-align: center;
   text-decoration: none;
   display: block;
   width: 126px;
-  border-radius: 2px;
-  margin: 40px auto 0 auto; }
+  transition: 0.3s; }
+  .cta:hover {
+    color: #7f8db4;
+    background-color: #23448d; }
 
 .hero {
   background: #fcfcfc url("../img/hero-bg-desktop.jpg") center bottom no-repeat;
@@ -902,22 +923,42 @@ Entitats Socials
   #entitats-socials .serveis:last-child {
     margin-right: 0; }
 
-#entitats-socials .marc-foto-5 {
-  z-index: 99;
-  position: relative; }
+#entitats-socials .contenidor-dreta {
+  position: relative;
+  height: 100%;
+  margin-top: 5%; }
+
+.marc-foto-6 {
+  background-color: #2951a7;
+  z-index: 999;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+  @media screen and (min-width: 64em) {
+    .marc-foto-6 {
+      width: 60%;
+      height: 470px; } }
 
 .rectangle-gris-vertical {
-  float: left;
-  display: block;
-  margin-right: 0.3858797911%;
-  width: 24.7105901567%;
-  margin-left: 37.6447049217%;
-  height: 630px;
-  background-color: #f7f7f7;
   z-index: 1;
-  position: relative; }
-  .rectangle-gris-vertical:last-child {
-    margin-right: 0; }
+  background-color: #fafafa;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+  @media screen and (min-width: 64em) {
+    .rectangle-gris-vertical {
+      width: 25%;
+      height: 100%; } }
+
+@media screen and (min-width: 64em) {
+  .image9 {
+    background-image: url(../img/entitatsocial_2_L.jpg);
+    background-size: cover; } }
+  @media only screen and (min-width: 64em) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 64em) and (min--moz-device-pixel-ratio: 2), only screen and (min-width: 64em) and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-width: 64em) and (min-resolution: 192dpi), only screen and (min-width: 64em) and (min-resolution: 2dppx) {
+    .image9 {
+      background-image: url(../img/entitatsocial_2_L_@2x.jpg); } }
 
 /* ==========================================================================
 Contacte
@@ -1011,6 +1052,11 @@ fieldset {
   fieldset:last-child {
     margin-right: 0; }
 
+fieldset .cta {
+  margin: 0;
+  border: 0;
+  padding: 0; }
+
 label {
   font-family: 'Open Sans', Helvetica, sans-serif;
   font-weight: 600;
@@ -1092,8 +1138,7 @@ label {
   width: 100%;
   height: 150px;
   border: 1px solid #f2f2f2;
-  margin: 10px auto 20px auto;
-  padding: 10px;
+  margin: 10px auto;
   padding-top: 10px;
   border-radius: 2px;
   box-shadow: inset 1px 12px 8px -7px #f5f5f5;
