--- a/sass/main.scss
+++ b/sass/main.scss
@@ -90,16 +90,19 @@ nav ul li a{
   @include SerifPro(700, 1.5em, #0a0a0a);
   text-decoration: none; 
   line-height: 50px;
+  transition: 0.3s;
+  &:hover{
+    color: #2951a7;
+    text-decoration: none;
+  }
 }
-nav ul li a:hover{
-  @include SerifPro(700, 1.5em, #2951a7);
-  text-decoration: none; 
-  // border-bottom: thin solid #2951a7;
-}
+
 #entitats_socials_link{
   margin-right: 20px; 
 }
-
+nav ul li:last-child {
+  margin:0;
+}
 .top-bar { 
 	margin: 0;
   width: 100%;
@@ -111,6 +114,23 @@ nav ul li a:hover{
   position: fixed;
   z-index: 99999;
 }
+.cta-menu{
+  height: 35px;
+  background-color: #2951a7;
+  border-radius: 2px;
+  @include opensans(600, 1.5em, #ffffff);
+  line-height: 35px;
+  margin: 0 auto;
+  text-align: center; 
+  text-decoration: none;
+  display: block;
+  padding: 0 10px 0 10px;
+  transition: 0.3s;
+  &:hover{
+    color: #7f8db4;
+    background-color: #23448d;
+  }
+ }
 
 /* ==========================================================================
    Hero
@@ -136,22 +156,24 @@ nav ul li a:hover{
   height: 50px;
   background-color: #2951a7;
   max-width: 200px;
-}
-.hero a{
-    @include opensans(600, 2em, #ffffff);
-    line-height: 50px;
-    text-align: center; 
-    text-decoration: none;
-    display: block;
-    width: 126px;
-    border-radius: 2px;
-    margin: 40px auto 0 auto;
+  border-radius: 2px;
+  @include opensans(600, 2em, #ffffff);
+  line-height: 50px;
+  margin: 40px auto 0 auto;
+  text-align: center; 
+  text-decoration: none;
+  display: block;
+  width: 126px;
+  transition: 0.3s;
+  &:hover{
+    color: #7f8db4;
+    background-color: #23448d;
+  }
 }
 .hero{
     background: #fcfcfc url("../img/hero-bg-desktop.jpg") center bottom no-repeat;
     height: 90vh;
     max-height: 690px;
-    // border-bottom: 1px solid #eeeeee;
     padding-top: 50px;
 }
 .serveis-clients{
@@ -230,10 +252,6 @@ h5{
   margin-right:2%;
   color:#2951a7;
 }
-// li{
-//   padding: 10px;
-//   border-bottom: 1px solid #f5f5f5;
-// }
 li:last-child{
   border-bottom: none;
 } 
@@ -706,7 +724,7 @@ Gran Empresa
 #gran-empresa .stroke-titol{
   width: 410px;
   margin-top: 4px;
-    border-bottom: 2px solid #f5f5f5;
+  border-bottom: 2px solid #f5f5f5;
 } 
 .rectangle-distorsionat{
   margin-top: -270px;
@@ -742,17 +760,73 @@ Entitats Socials
   @include span-columns(5 of 6);
   @include shift(1);
 }
-#entitats-socials .marc-foto-5{
-  z-index: 99;
+
+#entitats-socials .contenidor-dreta{
   position: relative;
+  height: 100%;
+  margin-top: 5%;
+}
+
+.marc-foto-6{ 
+  background-color: #2951a7;
+  z-index: 999;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  // Media Queries
+      @include media($m) {
+                }
+    // 
+    @include media($l) {
+          width: 60%;
+          height: 470px;
+                }
+    // 
 }
 .rectangle-gris-vertical{
-  @include span-columns(1.5 of 6);
-  @include shift(2.25);
-  height: 630px;
-  background-color:#f7f7f7;
   z-index: 1;
-  position: relative;
+  background-color:#fafafa;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  // Media Queries
+      @include media($m) {
+                }
+    // 
+    @include media($l) {
+            width: 25%;
+            height: 100%;
+                }
+    // 
+}
+.image9{
+    // // MOBILE
+  // background-image: url(../img/img1_S.jpg); 
+  //     // RETINA
+  //     @include hidpi(2) {
+  //       background-image: url(../img/img1_S_@2x.jpg);  
+  //       background-size: 100%;
+  //     }
+  // // TABLET
+  // @include media($m) {
+  // background-image: url(../img/img1_M.jpg);  
+  //      // RETINA
+  //       @include hidpi(2) {
+  //         background-image: url(../img/img1_M_@2x.jpg);  
+  //         background-size: 100%;
+  //       }
+  //  }
+ // DESKTOP
+  @include media($l) {
+    background-image: url(../img/entitatsocial_2_L.jpg); 
+    background-size: cover;
+         // RETINA
+          @include hidpi(2) {
+            background-image: url(../img/entitatsocial_2_L_@2x.jpg);  
+          }
+        }
 }
 
 /* ==========================================================================
@@ -814,7 +888,11 @@ fieldset{
   @include shift(.5);
   margin-top:40px;
 }
-
+fieldset .cta{
+  margin: 0;
+  border: 0;
+  padding:0;
+}
 label{
    @include opensans(600, 1.6em, #333333);
    @include clearfix;
@@ -853,8 +931,7 @@ label{
   width: 100%;
   height: 150px;
   border: 1px solid #f2f2f2;
-  margin: 10px auto 20px auto;
-  padding: 10px;
+  margin: 10px auto;
   padding-top: 10px;
   border-radius: 2px;
   box-shadow:inset 1px 12px 8px -7px #f5f5f5;
@@ -909,9 +986,6 @@ footer {
   display:inline-block;
   padding-right: 20px;
 }
-// .socialmedia a:first-child{
-//   padding-right: 20px;
-// }
 .logo-footer{
   @include span-columns(6 of 10);
   margin-top: 95px;
@@ -926,7 +1000,6 @@ footer {
   @include span-columns(2 of 10);
   margin-top: 100px;
 }
-
 .idioma a{
  @include opensans(600, 1.6em,#64666c);
  text-decoration: none;
